--- a/hyunjungkim/package.json
+++ b/hyunjungkim/package.json
@@ -2,7 +2,7 @@
   "name": "hyunjungkim",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +15,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
+    "mysql2": "^3.6.0",
     "typeorm": "^0.3.17"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
