--- a/suyeongbang/.gitignore
+++ b/suyeongbang/.gitignore
@@ -403,4 +403,7 @@ zsdoc/data
 /tests/_output/*
 !/tests/_output/.gitkeep
 
+# exclude schema
+/db/schema.sql
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,webstorm,macos,linux,windows,zsh,node
