--- a/geonryulpark/package.json
+++ b/geonryulpark/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "dbmate": "^2.5.0",
     "nodemon": "^3.0.1"
   }
 }
