app.js app.listen 수정, dbmate 추가

--- a/geonryulpark/.env.sample
+++ b/geonryulpark/.env.sample
@@ -1,5 +1,7 @@
+DATABASE_URL="mysql://myUsername:password@127.0.0.1:3306/myDatabase"
+
 DB_CONNECTION = mysql
-DB _HOST = 127.0.0.1
+DB_HOST = 127.0.0.1
 DB_USERNAME = root
 DB_PASSWORD = myPassword
 DB_DATABASE = myDB
