Express API유저회원가입 하기 update

--- a/hyunjungkim/.gitignore
+++ b/hyunjungkim/.gitignore
@@ -131,6 +131,9 @@ web_modules/
 .env.production.local
 .env.local
 
+#schema.sql
+schema.sql
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
