--- a/hyunjungkim/.env.sample
+++ b/hyunjungkim/.env.sample
@@ -1,5 +1,3 @@
-
-
 DB_CONNECTION = mysql
 DB_HOST = 127.0.0.1
 DB_PORT = 3306
@@ -7,3 +5,5 @@ DB_USERNAME = root
 DB_PASSWORD = myPassword
 DB_DATABASE = myDB
 DB_LOGGING =TRUE
+
+PORT = PORT
