Express API유저회원가입 하기 update 2

--- a/hyunjungkim/.gitignore
+++ b/hyunjungkim/.gitignore
@@ -132,7 +132,8 @@ web_modules/
 .env.local
 
 #schema.sql
-schema.sql
+db/schema.sql
+db/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
