유저 회원가입 기능 추가, bcrypt로 암호화, token으로 로그인 기능 구현

--- a/geonryulpark/.gitignore
+++ b/geonryulpark/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,vim,macos,linux,webstorm,windows,zsh,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,vim,macos,linux,webstorm,windows,zsh,node
 
+###Schema.sql###
+db/schema.sql
+
 ### Linux ###
 *~
 
